fix alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,13 @@
-body {
-  text-align: center;
-}
 
 /*why can I not simply use 'h1' as a selector without the container superclass?*/
 .container h1 {
   margin-top: 60px;
   margin-bottom: 60px;
+  text-align: center;
 }
-
-h2 {
-  text-align: left;
+.container h2 {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #destinations {
